--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Thinking will not overcome fear but action will."
+description: "他日若遂凌云志,敢笑黄巢不丈夫"
 ---
 
 {% for post in paginator.posts %}
